kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/006_inheritedproperty3_inv.kmt
/* $Id: 006_inheritedproperty3_inv.kmt,v 1.1 2007-09-10 08:35:12 cfaucher Exp $ */

// Test of constraints on operations
// When constraints are checked, errors

package root_package;
using kermeta::standard



class C1
{
	reference p1 : String
}


class C3 inherits C1
{
	property p1 : String
}